[package]
name = "network_monitor"
version = "0.3.0"
edition = "2021"
authors = ["Juliapixel"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
flexi_logger = { version = "0.28", features = ["compress"] }
futures-util = "0.3.30"
log = "0.4"
once_cell = "1.19"
surge-ping = "0.8"
tokio = { version = "1.35", features = ["full"] }
trust-dns-resolver = { version = "0.23", features = ["rustls", "dns-over-https-rustls"] }
url = "2.5"
